kubernetes/apps/media/tranga/app/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tranga
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - tranga.blackcats.cc
  rules:
    - backendRefs:
        - name: tranga-website
          port: 80
